update to 3.3.4,add jsw ...