@@ -3,6 +3,9 @@ echo [INFO] Use maven jetty-plugin run the project.
 
 cd %~dp0
 cd ..
+
+set MAVEN_OPTS=%MAVEN_OPTS% -XX:MaxPermSize=128m
 call mvn jetty:run -Dmaven.test.skip=true
+
 cd bin
 pause 
